[Bug fix] Fix horizontal overflow

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
-  max-width: 100%;
-  overflow-x: hidden;
 }
 
 input {
@@ -19,7 +17,7 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 .search {
-  width: 500px;
+  max-width: 500px;
   margin: 0 auto;
   padding-top: 200px;
 }
@@ -535,10 +533,4 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   margin-top: 50px;
   text-align: center;
   color: #777;
-}
-
-@media (max-width: 390px) {
-  body {
-    overflow-x: scroll;
-  }
 }
